<resources>
    <string name="app_name">HMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_greeting">Welcome to HMS App!</string>
    <string name="home_instruction">Please click the drawer above to login and book a stay!</string>


    <!-- title things -->
    <string name="generic_welcome">Please fill out the boxes below</string>

    <!-- login og create-->
    <string name="uid">Username</string>
    <string name="pwd">Password</string>
    <string name="eml">Email</string>
    <string name="tlf">Phone</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>

    <string name="userTitle">Create user or login</string>
    <string name="userDesc">Please click a button below to create a user or login</string>

    <string name="l_m_nav_create">Create a user</string>
    <string name="l_m_nav_login">Login</string>
    <string name="l_m_nav_login_google">Login with Google</string>

    <!-- knapper -->
    <string name="create_submit">Create</string>
    <string name="login_submit">Login</string>
    <string name="add_submit">Send</string>
    <string name="remove_submit">Remove</string>
    <string name="update_submit">Update</string>

    <!-- service; bookings etc.-->
    <string name="roomType">Room Type</string>
    <string name="roomPrice">Room Price</string>
    <string name="bookingStartDate">Startdate - yyyy-MM-dd</string>
    <string name="bookingEndDate">Enddate  - yyyy-MM-dd</string>
    <string name="bookingId">Booking ID</string>
    <string name="bookingStatus">Booking Status</string>

    <string name="damageTitle">Title</string>
    <string name="damageDesc">Description</string>
    <string name="reportId">Report ID</string>

    <string name="acceptBookingAccept">Accept</string>
    <string name="acceptBookingStatus">Set status</string>

    <!-- booking main -->
    <string name="b_m_nav_accept">Accept booking</string>
    <string name="b_m_nav_add">Add booking</string>
    <string name="b_m_nav_rem">Remove booking</string>
    <string name="b_n_nav_upd">Update booking</string>
    <string name="b_m_nav_get">Get my bookings</string>

    <!-- damage report main -->
    <string name="dr_m_nav_add">Add report</string>
    <string name="dr_m_nav_rem">Remove report</string>
    <string name="dr_m_nav_upd">Update report</string>
    <string name="dr_m_nav_get">Get reports</string>

    <!-- roomtype main -->
    <string name="rt_m_nav_add">Add room type</string>
    <string name="rt_m_nav_rem">Remove room type</string>
    <string name="rt_m_nav_upd">Update room type</string>
    <string name="rt_n_nav_get">Get room type</string>

    <string name="checkin_title">Check-in</string>
    <string name="checkout_title">Check-out</string>
    <string name="update_room">Update room status</string>


    <string name="server_client_id">210365446598-2trslj7u3surefvojuvoqaqq26gl08cs.apps.googleusercontent.com</string>

    <!-- staff hub -->
    <string name="staffhub_main">Staff Hub</string>
    <string name="staffhub_desc">Click a box to proceed</string>
    <string name="checkin">Go To Check In</string>
    <string name="checkout">Go To Check Out</string>
    <string name="bookings">Go To Bookings</string>
    <string name="reports">Go To Reports</string>
    <string name="roomview">Go To Room Overview</string>
    <string name="roomstatus">Update Room status</string>
    <string name="accepting">Update bookings</string>


    <!-- nav -->
    <string name="nav_menu_login">Logg inn</string>
    <string name="nav_menu_booking">Booking</string>
    <string name="damage_report_image">Damage report image</string>
    <string name="damage_report_add_image">Damage report add image</string>
    <string name="add_image">Add Image</string>

    <!-- contact us -->
    <string name="cs_main">Contact Us</string>
    <string name="cs_desc">Please fill out the boxes bellow</string>
    <string name="cs_name">Your name</string>
    <string name="cs_subject">Subject</string>
    <string name="cs_email">Your email</string>
    <string name="cs_message">You message</string>
    <string name="cs_send">Send</string>

    <string name="dest_thankyou">Thank you!</string>
    <string name="dest_textmore">Thank you for staying with us, we are looking forward to your visit!</string>


    <!-- arrays for spinner -->
    <string-array name="roomtype_array">
        <item>single</item>
        <item>double</item>
        <item>suite</item>
    </string-array>

    <string-array name="acceptbooking_accept_array">
        <item>Accepted</item>
        <item>Not Accepted</item>
        <item>Rejected</item>
    </string-array>

    <string-array name="acceptbooking_status_array">
        <item>Active</item>
        <item>Inactive</item>
    </string-array>

    <string-array name="roomstatus_array">
        <item>Free</item>
        <item>Occupied</item>
        <item>Maintenance</item>
        <item>Out of order</item>
    </string-array>

    <string-array name="room_array">
        <item>000</item>
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
        <item>201</item>
        <item>202</item>
        <item>203</item>
        <item>204</item>
        <item>205</item>
        <item>206</item>
        <item>207</item>
        <item>208</item>
        <item>209</item>
        <item>301</item>
        <item>302</item>
        <item>303</item>
        <item>304</item>
        <item>305</item>
        <item>306</item>
        <item>307</item>
        <item>308</item>
        <item>309</item>
    </string-array>
</resources>