<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.login.FragmentLoginMain">

    <TextView
        android:id="@+id/login_main_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/userTitle"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="30sp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        />

    <TextView
        android:id="@+id/login_main_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userDesc"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_main_id"
        />

    <Button
        android:id="@+id/login_main_create"
        style="@style/ButtonTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_main_desc"
        android:text="@string/l_m_nav_create"/>

    <Button
        android:id="@+id/login_main_login"
        style="@style/ButtonTest"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_main_create"
        android:text="@string/l_m_nav_login"/>

    <Button
        android:id="@+id/login_main_google"
        style="@style/ButtonTest"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_main_login"
        android:text="@string/l_m_nav_login_google"/>
</androidx.constraintlayout.widget.ConstraintLayout>