<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".ui.div.FragmentContactUs">

    <TextView
        android:id="@+id/cs_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/cs_main"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="30sp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        />

    <TextView
        android:id="@+id/cs_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#adadad"
        android:textStyle="italic"
        android:text="@string/cs_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cs_main"
        />

    <EditText
        android:id="@+id/cs_name"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:theme="@style/AppTheme.DynamicBorderColor"
        android:layout_marginTop="10dp"

        android:hint="@string/cs_name"
        android:autofillHints="@string/cs_main"

        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cs_desc"/>

    <EditText
        android:id="@+id/cs_email"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:theme="@style/AppTheme.DynamicBorderColor"
        android:layout_marginTop="10dp"

        android:hint="@string/cs_email"
        android:autofillHints="@string/cs_email"

        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cs_name"/>

    <EditText
        android:id="@+id/cs_subject"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:theme="@style/AppTheme.DynamicBorderColor"
        android:layout_marginTop="10dp"

        android:hint="@string/cs_subject"
        android:autofillHints="@string/cs_subject"

        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cs_email"/>

    <EditText
        android:id="@+id/cs_message"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:theme="@style/AppTheme.DynamicBorderColor"
        android:layout_marginTop="10dp"

        android:hint="@string/cs_message"
        android:autofillHints="@string/cs_message"

        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cs_subject"/>

    <Button
        android:id="@+id/cs_send"
        style="@style/ButtonTest"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cs_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cs_message"/>


</androidx.constraintlayout.widget.ConstraintLayout>