<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".ui.login.FragmentCreate">

    <EditText
        android:id="@+id/create_eml"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:autofillHints="@string/eml"
        android:hint="@string/eml"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_uid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/uid"
        android:hint="@string/uid"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_eml" />

    <EditText
        android:id="@+id/create_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/firstname"
        android:hint="@string/firstname"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_uid" />

    <EditText
        android:id="@+id/create_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/lastname"
        android:hint="@string/lastname"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_firstname" />

    <EditText
        android:id="@+id/create_tlf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/tlf"
        android:hint="@string/tlf"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_lastname" />

    <EditText
        android:id="@+id/create_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:textColor="#ededed"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/pwd"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_tlf" />



    <Button
        android:id="@+id/create_submit"
        style="@style/ButtonTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_submit"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_pwd"
        />


</androidx.constraintlayout.widget.ConstraintLayout>