<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".ui.hmsservice.staff.FragmentCheckOut">

    <TextView
        android:id="@+id/check_out_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/checkout_title"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="30sp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        />

    <TextView
        android:id="@+id/check_out_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_welcome"
        android:textColor="#adadad"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_out_main"
        />

    <EditText
        android:id="@+id/check_out_bookingid"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="80dp"
        android:background="@drawable/edittextbackground"
        android:textColorHint="#adadad"
        android:theme="@style/AppTheme.DynamicBorderColor"

        android:hint="@string/bookingId"
        android:autofillHints="@string/bookingStatus"

        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_out_desc"
        />

    <Button
        android:id="@+id/check_out_submit"
        style="@style/ButtonTest"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_out_bookingid"/>
</androidx.constraintlayout.widget.ConstraintLayout>